feat(product): add public API for retrieving products with search functionality && refactor: optimize product service